---------------------------------------------------------------------------
Version 1.16.1 (RGer), 2007-07-1?
- added $RepeatedLineReduction config parameter
- added $EscapeControlCharactersOnReceive config parameter
- added regular expression support to the filter engine
  thanks to Michel Samia for providing the patch!
- enhanced $AllowedSender functionality. Credits to mildew@gmail.com for
  the patch doing that
  - added IPv6 support
  - allowed DNS hostnames
  - allowed DNS wildcard names
- added new option $DropMsgsWithMaliciousDnsPTRRecords
- added autoconf so that rfc3195d, rsyslogd and klogd are stored to /sbin
---------------------------------------------------------------------------
Version 1.16.0 (RGer/Peter Vrabec), 2007-07-13 - The Friday, 13th Release ;)
- build system switched to autotools
- removed SYSV preprocessor macro use, replaced with autotools equivalents
- fixed a bug that caused rsyslogd to segfault when TCP listening was
  disabled and it terminated
- added new properties "syslogfacility-text" and "syslogseverity-text"
  thanks to varmojfekoj <varmojfekoj@gmail.com> for the patch
- added the -x option to disable hostname dns reslution
  thanks to varmojfekoj <varmojfekoj@gmail.com> for the patch
- begun to better modularize syslogd.c - this is an ongoing project; moved
  type definitions to a separate file
- removed some now-unused fields from struct filed
- move file size limit fields in struct field to the "right spot" (the file
  writing part of the union - f_un.f_file)
- subdirectories linux and solaris are no longer part of the distribution
  package. This is not because we cease support for them, but there are no
  longer any files in them after the move to autotools
---------------------------------------------------------------------------
Version 1.15.1 (RGer), 2007-07-10
- fixed a bug that caused a dynaFile selector to stall when there was
  an open error with one file 